[package]
name = "lsystem"
version = "0.0.1"
authors = [ "Magnus Bjerke Vik <mbvett@gmail.com>" ]

[dependencies]
kiss3d = "0.9"
rand = "0.3"
num = "0.1"
time = "0.1"
crossbeam = "0.2"
num_cpus = "1"
futures = "0.1"
futures-cpupool = "0.1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.7"
bincode = "0.8"
clap = "2"
parking_lot = { version = "0.4", features = ["nightly"] }
csv = "0.15"

# Dependencies of kiss3d also used by the project.
# Dependencies must match the same versions kiss3d uses.
nalgebra = "0.12"
glfw = "0.8"
ncollide_utils = "0.7"

# Local dependencies.
yobun = { path = "crates/yobun" }
lsys = { path = "crates/lsys" }
lsys_kiss3d = { path = "crates/lsys_kiss3d" }
abnf = { path = "crates/abnf" }
