[package]
name = "lsys_kiss3d"
version = "0.1.0"
authors = ["Magnus Bjerke Vik <mbvett@gmail.com>"]

[dependencies]
kiss3d = { git = "https://github.com/Gachapen/kiss3d.git", branch = "glfw_context" }
time = "0.1"
rand = "^0.3.16"

# Dependencies of kiss3d also used by the project.
# Dependencies must match the same versions kiss3d uses.
nalgebra = "0.13"
ncollide_transformation = "0.8"

lsys = { path = "../lsys" }
